--- a/chat.html
+++ b/chat.html
@@ -45,7 +45,8 @@ header h1 { display:flex; align-items:center; gap:8px; color: var(--color-primar
 .userItem img { width:28px; height:28px; border-radius:50%; }
 
 #chatContainer { flex:1; display:flex; flex-direction:column; overflow:hidden; position:relative; }
-#chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; flex-wrap:wrap; gap:4px; }
+#chatHeader { display:flex; justify-content:space-between; align-items:center; padding:6px 10px; border-bottom:1px solid #ddd; background:#fafafa; position:relative; gap:4px; flex-wrap:wrap; }
+#chatHeader .chatHeaderButtons { display:flex; gap:6px; flex-wrap:wrap; }
 #chatWindow { flex:1; overflow-y:auto; padding:10px; background:white; }
 .msg { margin:5px 0; padding:8px; border-radius:8px; max-width:80%; word-wrap:break-word; position:relative; cursor:pointer; }
 .userMsg { background:#e0f7e9; align-self:flex-end; text-align:right; }
@@ -70,9 +71,6 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; width:100%; }
   footer { position:fixed; bottom:0; left:0; right:0; z-index:100; width:100%; height:40px; }
   #userList, #adSidebar { display:none; }
-
-  #chatHeader { flex-wrap:wrap; }
-  #chatHeader button { flex:1 1 auto; margin-top:4px; }
 }
 </style>
 </head>
@@ -97,8 +95,8 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
   <div id="chatContainer">
     <div id="chatHeader">
       <div id="currentPartner">🌍 Global</div>
-      <div>
-        <button id="hideChatBtn" style="display:none;color:red;">Apagar chat</button>
+      <div class="chatHeaderButtons">
+        <span style="cursor:pointer;color:red;" id="hideChatBtn" onclick="hideChat()" style="display:none;">Apagar chat</span>
         <button id="blockBtn" style="display:none;">Bloquear</button>
       </div>
     </div>
@@ -114,14 +112,8 @@ footer { background:white; color:#555; text-align:center; padding:6px; font-size
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
 <script>
-// === Firebase Setup ===
-const firebaseConfig = { apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
-authDomain:"dimitry-rusian.firebaseapp.com",
-databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",
-projectId:"dimitry-rusian",
-storageBucket:"dimitry-rusian.appspot.com",
-messagingSenderId:"449029666805",
-appId:"1:449029666805:web:feaf575a7b7e6f234a52bc" };
+// Firebase
+const firebaseConfig = {apiKey:"AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",authDomain:"dimitry-rusian.firebaseapp.com",databaseURL:"https://dimitry-rusian-default-rtdb.firebaseio.com",projectId:"dimitry-rusian",storageBucket:"dimitry-rusian.appspot.com",messagingSenderId:"449029666805",appId:"1:449029666805:web:feaf575a7b7e6f234a52bc"};
 firebase.initializeApp(firebaseConfig);
 
 const auth=firebase.auth();
@@ -148,7 +140,7 @@ let userData={};
 let currentPartnerUID=null;
 let blockedUsers={};
 
-// === Login / Logout ===
+// LOGIN/LOGOUT
 loginBtn.onclick=()=>auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
 logoutBtn.onclick=()=>auth.signOut();
 
@@ -176,14 +168,14 @@ auth.onAuthStateChanged(user=>{
   }
 });
 
-// === Carregar bloqueados ===
+// Carregar bloqueados
 async function loadBlockedUsers(){
   if(!userData.uid) return;
-  const snap=await db.ref(`blocked/${userData.uid}`).once("value");
-  blockedUsers=snap.val()||{};
+  const snap = await db.ref(`blocked/${userData.uid}`).once("value");
+  blockedUsers = snap.val()||{};
 }
 
-// === Bloquear / Desbloquear ===
+// Bloquear/Desbloquear
 function toggleBlock(){
   if(!currentPartnerUID || !userData.uid) return;
   const ref=db.ref(`blocked/${userData.uid}/${currentPartnerUID}`);
@@ -201,20 +193,143 @@ function toggleBlock(){
 }
 blockBtn.onclick=toggleBlock;
 
-// === Apagar chat local ===
-hideChatBtn.onclick=()=>{
-  if(confirm("Apagar chat localmente?")){
+// Funções de Usuários
+function updateUserList(){
+  db.ref("online").once("value").then(snap=>{
+    const users=snap.val()||{};
+    userList.innerHTML="";
+    mobileUserLine.innerHTML="";
+    alertIcons={};
+
+    const divGlobal=document.createElement("div");
+    divGlobal.className="userItem";
+    divGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png"><span>Global</span>`;
+    divGlobal.onclick=()=>startGlobalChat();
+    userList.appendChild(divGlobal);
+
+    const mobGlobal=document.createElement("div");
+    mobGlobal.className="userItemMobile";
+    mobGlobal.innerHTML=`<img src="https://cdn-icons-png.flaticon.com/512/3126/3126540.png" title="Global">`;
+    mobGlobal.onclick=()=>startGlobalChat();
+    mobileUserLine.appendChild(mobGlobal);
+
+    if(userData.uid){
+      const divSelf=document.createElement("div");
+      divSelf.className="userItem";
+      divSelf.innerHTML=`<img src="${userData.photo}"><span>${userData.name}</span>`;
+      divSelf.onclick=()=>alert("Este é você!");
+      userList.appendChild(divSelf);
+
+      const mobSelf=document.createElement("div");
+      mobSelf.className="userItemMobile";
+      mobSelf.innerHTML=`<img src="${userData.photo}" title="${userData.name}">`;
+      mobSelf.onclick=()=>alert("Este é você!");
+      mobileUserLine.appendChild(mobSelf);
+    }
+
+    for(const [uid,u] of Object.entries(users)){
+      if(!u.name || uid===userData.uid) continue;
+      const div=document.createElement("div");
+      div.className="userItem";
+      div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
+      div.onclick=()=>startPrivateChat(uid,u.name);
+      userList.appendChild(div);
+
+      const mob=document.createElement("div");
+      mob.className="userItemMobile";
+      mob.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}" title="${u.name}">`;
+      mob.onclick=()=>startPrivateChat(uid,u.name);
+      mobileUserLine.appendChild(mob);
+
+      alertIcons[uid]={desktop:div,mobile:mob};
+    }
+
+    onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
+  });
+}
+
+// CHAT GLOBAL
+function startGlobalChat(){
+  currentChat="global";
+  currentPartnerUID=null;
+  currentPartnerEl.textContent="🌍 Global";
+  blockBtn.style.display="none";
+  hideChatBtn.style.display="none";
+  chatWindow.innerHTML="";
+  generalBtn.style.display="none";
+  db.ref("chatGlobal").once("value",s=>s.forEach(m=>showMessage(m.val(),"chatGlobal")));
+}
+
+// CHAT PRIVADO
+function startPrivateChat(uid,name){
+  currentPartnerUID=uid;
+  currentChat=[userData.uid,uid].sort().join("_");
+  currentPartnerEl.textContent=name;
+  blockBtn.style.display="inline-block";
+  hideChatBtn.style.display="inline-block";
+  blockBtn.textContent = blockedUsers[uid]?"Desbloquear":"Bloquear";
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
+  generalBtn.style.display="inline-block";
+
+  if(privateChatListener) privateChatListener.off();
+  privateChatListener=db.ref("private/"+currentChat);
+  privateChatListener.on("child_added",snap=>{
+    const msg=snap.val();
+    showMessage(msg,currentChat);
+    if(msg.uid!==userData.uid){
+      const icon=alertIcons[msg.uid]?.desktop;
+      if(icon && !icon.querySelector(".alert-dot")){
+        const dot=document.createElement("div");
+        dot.className="alert-dot";
+        icon.appendChild(dot);
+        const dotMob=dot.cloneNode();
+        alertIcons[msg.uid].mobile.appendChild(dotMob);
+      }
+    }
+  });
+}
+
+// MENSAGENS
+sendBtn.onclick=sendMessage;
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
+
+function sendMessage(){
+  const text=msgInput.value.trim();
+  if(!text || !userData.uid) return;
+  if(currentPartnerUID && blockedUsers[currentPartnerUID]){
+    alert("Você bloqueou este usuário ou está bloqueado.");
+    return;
+  }
+  const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
+  db.ref(path).push({user:userData.name,uid:userData.uid,text,timestamp:Date.now()});
+  msgInput.value="";
+}
+
+function showMessage(msg,room){
+  if(room!=="chatGlobal" && room!==currentChat) return;
+  const div=document.createElement("div");
+  div.className=msg.uid===userData.uid?"msg userMsg":"msg otherMsg";
+  div.textContent=`${msg.user}: ${msg.text}`;
+  div.onclick=()=>{
+    const icon=alertIcons[msg.uid]?.desktop;
+    if(icon) icon.querySelector(".alert-dot")?.remove();
+    const iconMob=alertIcons[msg.uid]?.mobile;
+    if(iconMob) iconMob.querySelector(".alert-dot")?.remove();
+  };
+  chatWindow.appendChild(div);
+  chatWindow.scrollTop=chatWindow.scrollHeight;
+}
+
+// APAGAR CHAT LOCAL
+function hideChat(){
+  if(confirm("Apagar este chat localmente?")){
     chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Chat apagado. Você pode retomar a conversa clicando no usuário novamente.</div>`;
   }
-};
+}
 
-// === Outras funções ===
-function updateUserList(){ /* ... implementação igual anterior ... */ }
-function startGlobalChat(){ /* ... implementação igual anterior ... */ }
-function startPrivateChat(uid,name){ /* ... implementação ajustada para mostrar hideChatBtn e blockBtn ao abrir chat */ }
-function sendMessage(){ /* ... */ }
-function showMessage(msg,room){ /* ... */ }
-function startMobileScroll(){ /* ... */ }
+// VOLTAR AO CHAT GLOBAL
+generalBtn.onclick=startGlobalChat;
+
 </script>
 </body>
 </html>
