--- a/index.html
+++ b/index.html
@@ -395,6 +395,14 @@ aside {
   }
 }
 
+
+
+
+
+
+
+
+ 
 </style>
 </head>
 <body>
@@ -553,7 +561,7 @@ const contentData = {
   {title:'вопрос 10', phrase:'Seu carro é novo.', words:['Твоя','машина','новая'], translation:'Seu carro é novo.', audio:'audio/possessivos10.mp3'}
 ],
 
-numerais: [
+      numerais: [
     {title:'Pergunta 1', phrase:'Um livro', words:['Одна','книга'], translation:'Um livro', audio:'audio/01.mp3'},
     {title:'Pergunta 2', phrase:'Dois carros', words:['Две','машины'], translation:'Dois carros', audio:'audio/02.mp3'},
     {title:'Pergunta 3', phrase:'Três casas', words:['Три','дома'], translation:'Três casas', audio:'audio/03.mp3'},
@@ -592,7 +600,7 @@ verboEstarPresente: [
     {title:'Pergunta 10', phrase:'Nós não estamos cansados.', words:['Мы','не','устали.'], translation:'Nós não estamos cansados.', audio:'audio/30.mp3'}
   ],
 
-verboSerPassado: [
+      verboSerPassado: [
     {title:'Pergunta 1', phrase:'Eu fui estudante.', words:['Я','был','студентом.'], translation:'Eu fui estudante.', audio:'audio/31.mp3'},
     {title:'Pergunta 2', phrase:'Tu foste professor.', words:['Ты','был','учителем.'], translation:'Tu foste professor.', audio:'audio/32.mp3'},
     {title:'Pergunta 3', phrase:'Ele foi médico.', words:['Он','был','врачом.'], translation:'Ele foi médico.', audio:'audio/33.mp3'},
@@ -605,7 +613,7 @@ verboSerPassado: [
     {title:'Pergunta 10', phrase:'Nós não fomos velhos.', words:['Мы','не','были','старыми.'], translation:'Nós não fomos velhos.', audio:'audio/40.mp3'}
   ],
       
-verboEstarPassado: [
+      verboEstarPassado: [
     {title:'Pergunta 1', phrase:'Eu estive em casa.', words:['Я','был','дома.'], translation:'Eu estive em casa.', audio:'audio/41.mp3'},
     {title:'Pergunta 2', phrase:'Tu estiveste cansado.', words:['Ты','был','усталым.'], translation:'Tu estiveste cansado.', audio:'audio/42.mp3'},
     {title:'Pergunta 3', phrase:'Ele esteve no trabalho.', words:['Он','был','на','работе.'], translation:'Ele esteve no trabalho.', audio:'audio/43.mp3'},
@@ -618,7 +626,7 @@ verboEstarPassado: [
     {title:'Pergunta 10', phrase:'Nós não estivemos cansados.', words:['Мы','не','были','усталыми.'], translation:'Nós não estivemos cansados.', audio:'audio/50.mp3'}
   ],
 
-verboSerFuturo: [
+      verboSerFuturo: [
     {title:'Pergunta 1', phrase:'Eu serei estudante.', words:['Я','буду','студентом.'], translation:'Eu serei estudante.', audio:'audio/51.mp3'},
     {title:'Pergunta 2', phrase:'Tu serás professor.', words:['Ты','будешь','учителем.'], translation:'Tu serás professor.', audio:'audio/52.mp3'},
     {title:'Pergunta 3', phrase:'Ele será médico.', words:['Он','будет','врачом.'], translation:'Ele será médico.', audio:'audio/53.mp3'},
@@ -631,7 +639,7 @@ verboSerFuturo: [
     {title:'Pergunta 10', phrase:'Nós não seremos velhos.', words:['Мы','не','будем','старыми.'], translation:'Nós não seremos velhos.', audio:'audio/60.mp3'}
   ],
 
-verboEstarFuturo: [
+      verboEstarFuturo: [
     {title:'Pergunta 1', phrase:'Eu estarei em casa.', words:['Я','буду','дома.'], translation:'Eu estarei em casa.', audio:'audio/61.mp3'},
     {title:'Pergunta 2', phrase:'Tu estarás cansado.', words:['Ты','будешь','усталым.'], translation:'Tu estarás cansado.', audio:'audio/62.mp3'},
     {title:'Pergunta 3', phrase:'Ele estará no trabalho.', words:['Он','будет','на','работе.'], translation:'Ele estará no trabalho.', audio:'audio/63.mp3'},
@@ -644,7 +652,7 @@ verboEstarFuturo: [
     {title:'Pergunta 10', phrase:'Nós não estaremos cansados.', words:['Мы','не','будем','усталыми.'], translation:'Nós não estaremos cansados.', audio:'audio/70.mp3'}
   ],
 
-quantidades:[
+    quantidades:[
   {title:'вопрос 1', phrase:'Eu tenho duas maçãs.', words:['У','меня','два','яблока'], translation:'Eu tenho duas maçãs.', audio:'audio/quantidades1.mp3'},
   {title:'вопрос 2', phrase:'Tenho três livros.', words:['У','меня','три','книги'], translation:'Tenho três livros.', audio:'audio/quantidades2.mp3'},
   {title:'вопрос 3', phrase:'Ele comprou cinco laranjas.', words:['Он','купил','пять','апельсинов'], translation:'Ele comprou cinco laranjas.', audio:'audio/quantidades3.mp3'},
@@ -657,7 +665,7 @@ quantidades:[
   {title:'вопрос 10', phrase:'Vocês têm cinco canetas?', words:['У','вас','есть','пять','ручек'], translation:'Vocês têm cinco canetas?', audio:'audio/quantidades10.mp3'}
 ],
 
-objetoDireto:[
+    objetoDireto:[
   {title:'Pergunta 1', phrase:'Eu vejo o carro.', words:['Я','вижу','машину'], translation:'Eu vejo o carro.', audio:'audio/objetoDireto1.mp3'},
   {title:'Pergunta 2', phrase:'Ela lê o livro.', words:['Она','читает','книгу'], translation:'Ela lê o livro.', audio:'audio/objetoDireto2.mp3'},
   {title:'Pergunta 3', phrase:'Nós compramos pão.', words:['Мы','покупаем','хлеб'], translation:'Nós compramos pão.', audio:'audio/objetoDireto3.mp3'},
@@ -669,7 +677,7 @@ objetoDireto:[
   {title:'Pergunta 9', phrase:'Eu escrevo uma carta.', words:['Я','пишу','письмо'], translation:'Eu escrevo uma carta.', audio:'audio/objetoDireto9.mp3'},
   {title:'Pergunta 10', phrase:'Ele cozinha a comida.', words:['Он','готовит','еду'], translation:'Ele cozinha a comida.', audio:'audio/objetoDireto10.mp3'}
 ],
-tempoPresente:[
+    tempoPresente:[
   {title:'Pergunta 1', phrase:'Eu trabalho todos os dias.', words:['Я','работаю','каждый','день'], translation:'Eu trabalho todos os dias.', audio:'audio/tempoPresente1.mp3'},
   {title:'Pergunta 2', phrase:'Ela estuda na escola.', words:['Она','учится','в','школе'], translation:'Ela estuda na escola.', audio:'audio/tempoPresente2.mp3'},
   {title:'Pergunta 3', phrase:'Nós jogamos futebol.', words:['Мы','играем','в','футбол'], translation:'Nós jogamos futebol.', audio:'audio/tempoPresente3.mp3'},
@@ -681,7 +689,7 @@ tempoPresente:[
   {title:'Pergunta 9', phrase:'Eu caminho pela cidade.', words:['Я','гуляю','по','городу'], translation:'Eu caminho pela cidade.', audio:'audio/tempoPresente9.mp3'},
   {title:'Pergunta 10', phrase:'Eles jogam xadrez.', words:['Они','играют','в','шахматы'], translation:'Eles jogam xadrez.', audio:'audio/tempoPresente10.mp3'}
 ],
-infinitivo:[
+   infinitivo:[
   {title:'Pergunta 1', phrase:'Eu quero comer.', words:['Я','хочу','есть'], translation:'Eu quero comer.', audio:'audio/infinitivo1.mp3'},
   {title:'Pergunta 2', phrase:'Ela gosta de ler.', words:['Ей','нравится','читать'], translation:'Ela gosta de ler.', audio:'audio/infinitivo2.mp3'},
   {title:'Pergunta 3', phrase:'Nós precisamos estudar.', words:['Нам','нужно','учиться'], translation:'Nós precisamos estudar.', audio:'audio/infinitivo3.mp3'},
@@ -693,7 +701,7 @@ infinitivo:[
   {title:'Pergunta 9', phrase:'Eu preciso descansar.', words:['Мне','нужно','отдыхать'], translation:'Eu preciso descansar.', audio:'audio/infinitivo9.mp3'},
   {title:'Pergunta 10', phrase:'Eles desejam jogar futebol.', words:['Они','хотят','играть','в','футбол'], translation:'Eles desejam jogar futebol.', audio:'audio/infinitivo10.mp3'}
 ],
-lugares:[
+    lugares:[
   {title:'Pergunta 1', phrase:'O restaurante está perto.', words:['Ресторан','рядом'], translation:'O restaurante está perto.', audio:'audio/lugares1.mp3'},
   {title:'Pergunta 2', phrase:'A escola fica longe.', words:['Школа','далеко'], translation:'A escola fica longe.', audio:'audio/lugares2.mp3'},
   {title:'Pergunta 3', phrase:'O parque é bonito.', words:['Парк','красивый'], translation:'O parque é bonito.', audio:'audio/lugares3.mp3'},
@@ -717,7 +725,7 @@ profissoes:[
   {title:'Pergunta 9', phrase:'Eles são motoristas.', words:['Они','водители'], translation:'Eles são motoristas.', audio:'audio/profissoes9.mp3'},
   {title:'Pergunta 10', phrase:'Ela trabalha como designer.', words:['Она','работает','дизайнером'], translation:'Ela trabalha como designer.', audio:'audio/profissoes10.mp3'}
 ],
-viagem:[
+    viagem:[
   {title:'Pergunta 1', phrase:'Eu vou para Moscou.', words:['Я','еду','в','Москву'], translation:'Eu vou para Moscou.', audio:'audio/viagem1.mp3'},
   {title:'Pergunta 2', phrase:'Ela viaja de avião.', words:['Она','путешествует','на','самолёте'], translation:'Ela viaja de avião.', audio:'audio/viagem2.mp3'},
   {title:'Pergunta 3', phrase:'Nós vamos para a praia.', words:['Мы','едем','на','пляж'], translation:'Nós vamos para a praia.', audio:'audio/viagem3.mp3'},
@@ -729,7 +737,7 @@ viagem:[
   {title:'Pergunta 9', phrase:'Eu faço check-in.', words:['Я','регистрируюсь'], translation:'Eu faço check-in.', audio:'audio/viagem9.mp3'},
   {title:'Pergunta 10', phrase:'Eles alugam um carro.', words:['Они','арендуют','машину'], translation:'Eles alugam um carro.', audio:'audio/viagem10.mp3'}
 ],
-familia:[
+    familia:[
   {title:'Pergunta 1', phrase:'Meu pai trabalha.', words:['Мой','папа','работает'], translation:'Meu pai trabalha.', audio:'audio/familia1.mp3'},
   {title:'Pergunta 2', phrase:'Minha mãe cozinha.', words:['Моя','мама','готовит'], translation:'Minha mãe cozinha.', audio:'audio/familia2.mp3'},
   {title:'Pergunta 3', phrase:'Meu irmão estuda.', words:['Мой','брат','учится'], translation:'Meu irmão estuda.', audio:'audio/familia3.mp3'},
@@ -741,7 +749,7 @@ familia:[
   {title:'Pergunta 9', phrase:'Meus pais moram em São Petersburgo.', words:['Мои','родители','живут','в','Санкт-Петербурге'], translation:'Meus pais moram em São Petersburgo.', audio:'audio/familia9.mp3'},
   {title:'Pergunta 10', phrase:'Nós amamos nossa família.', words:['Мы','любим','нашу','семью'], translation:'Nós amamos nossa família.', audio:'audio/familia10.mp3'}
 ],
-verbosMovimento:[
+    verbosMovimento:[
   {title:'Pergunta 1', phrase:'Eu vou a pé para a escola.', words:['Я','иду','в','школу'], translation:'Eu vou a pé para a escola.', audio:'audio/verbosMovimento1.mp3'},
   {title:'Pergunta 2', phrase:'Ele vai de carro para o trabalho.', words:['Он','едет','на','работу'], translation:'Ele vai de carro para o trabalho.', audio:'audio/verbosMovimento2.mp3'},
   {title:'Pergunta 3', phrase:'Nós vamos de trem para Moscou.', words:['Мы','едем','в','Москву','на','поезде'], translation:'Nós vamos de trem para Moscou.', audio:'audio/verbosMovimento3.mp3'},
@@ -753,7 +761,7 @@ verbosMovimento:[
   {title:'Pergunta 9', phrase:'Ela entra no ônibus.', words:['Она','входит','в','автобус'], translation:'Ela entra no ônibus.', audio:'audio/verbosMovimento9.mp3'},
   {title:'Pergunta 10', phrase:'Eles chegam à estação.', words:['Они','приходят','на','вокзал'], translation:'Eles chegam à estação.', audio:'audio/verbosMovimento10.mp3'}
 ],
-FrasesDeConvercacao: [
+    FrasesDeConvercacao: [
   {title:'Pergunta 1', phrase:'Olá! Qual é o seu nome?', words:['Привет!','Как','тебя','зовут?'], translation:'Olá! Qual é o seu nome?', audio:'audio/01.mp3'},
   {title:'Pergunta 2', phrase:'Meu nome é Anna. E o seu?', words:['Меня','зовут','Анна.','А','тебя?'], translation:'Meu nome é Anna. E o seu?', audio:'audio/02.mp3'},
   {title:'Pergunta 3', phrase:'De onde você é?', words:['Откуда','ты?'], translation:'De onde você é?', audio:'audio/03.mp3'},
@@ -866,8 +874,158 @@ FrasesDeConvercacao: [
   });
 
 </script>
+
 <script src="script.js"></script>
+
+
+<!-- Firebase Scripts -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
 <script>
+   // Configuração do Firebase
+  const firebaseConfig = {
+    apiKey: "AIzaSyCVt4eQOSUMhtKTUc89lAIM-AwrPakEOOI",
+    authDomain: "clube-eslavo-dimitri.firebaseapp.com",
+    projectId: "clube-eslavo-dimitri",
+    storageBucket: "clube-eslavo-dimitri.firebasestorage.app",
+    messagingSenderId: "696802076277",
+    appId: "1:696802076277:web:3be4a9fb64001e25cefa3c",
+    measurementId: "G-1H63WPQT0V"
+  };
+
+  // Inicializa Firebase
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+
+  // Referências aos elementos
+  const loginBtn = document.getElementById('loginBtn');
+  const chatBtn = document.getElementById('chatBtn');
+  const chatWindow = document.getElementById('chatWindow');
+
+  // Checa se usuário está logado ao carregar a página
+  auth.onAuthStateChanged(user => {
+    if (user) {
+      loginBtn.textContent = `Olá, ${user.email}`;
+      chatBtn.style.display = 'block';
+    } else {
+      loginBtn.textContent = 'Login / Cadastro';
+      chatBtn.style.display = 'none';
+      chatWindow.style.display = 'none';
+    }
+  });
+
+  // Abrir modal de login/cadastro
+  // Redirecionar para tela de login.html ao clicar
+      loginBtn.addEventListener('click', () => {
+      window.location.href = "login.html";
+});
+
+
+    if (!email || !password) return alert("Email e senha são obrigatórios.");
+
+    // Tenta login
+    auth.signInWithEmailAndPassword(email, password)
+      .then(userCredential => {
+        alert("Login efetuado com sucesso!");
+      })
+      .catch(error => {
+       if (error.code === "auth/user-not-found") {
+    const confirmCreate = confirm("Usuário não encontrado. Deseja criar uma conta?");
+    if (confirmCreate) {
+        auth.createUserWithEmailAndPassword(email, password)
+          .then(userCredential => alert("Conta criada com sucesso!"))
+          .catch(err => alert("Erro ao criar conta: " + err.message));
+    }
+} else {
+    alert("Erro no login: " + error.message);
+}
+
+            .catch(err => {
+              alert("Erro ao criar conta: " + err.message);
+            });
+        } else {
+          alert("Erro no login: " + error.message);
+        }
+      });
+  });
+
+  // Abrir/Fechar chat apenas se logado
+  chatBtn.addEventListener('click', () => {
+    const user = auth.currentUser;
+    if (!user) {
+      alert("Você precisa estar logado para usar o chat.");
+      return;
+    }
+    chatWindow.style.display = chatWindow.style.display === 'flex' ? 'none' : 'flex';
+  });
+
+  // Envio de mensagens (exemplo simples)
+  const sendBtn = document.getElementById('sendBtn');
+  const msgInput = document.getElementById('msgInput');
+  const chatMessages = document.getElementById('chatMessages');
+
+  sendBtn.addEventListener('click', () => {
+    const user = auth.currentUser;
+    if (!user) {
+      alert("Você precisa estar logado para enviar mensagens.");
+      return;
+    }
+    const msg = msgInput.value.trim();
+    if (!msg) return;
+    const p = document.createElement('p');
+    p.textContent = `Você: ${msg}`;
+    chatMessages.appendChild(p);
+    msgInput.value = '';
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+
+    // Aqui você pode adicionar lógica de bot ou salvar em DB
+    const botReply = document.createElement('p');
+    botReply.textContent = `Dimitri: Recebi sua mensagem!`;
+    chatMessages.appendChild(botReply);
+    chatMessages.scrollTop = chatMessages.scrollHeight;
+  });
+</script>
+
+<script>
+  // Botão de login redireciona para login.html
+  document.getElementById("loginBtn").addEventListener("click", function() {
+    window.location.href = "login.html";
+  });
+
+
+
+// ===== Gerenciar Login e Logout =====
+const loginBtn = document.getElementById('loginBtn');
+const logoutBtn = document.getElementById('logoutBtn');
+
+// Simulação de login
+loginBtn.addEventListener('click', () => {
+  // Salva estado de login no localStorage
+  localStorage.setItem('userLogged', 'true');
+  loginBtn.style.display = 'none';
+  logoutBtn.style.display = 'inline-block';
+});
+
+// Logout sem sair da página
+logoutBtn.addEventListener('click', () => {
+  localStorage.removeItem('userLogged');
+  loginBtn.style.display = 'inline-block';
+  logoutBtn.style.display = 'none';
+  alert('Você saiu, mas permanecerá nesta página.');
+});
+
+// Verificar estado de login ao carregar a página
+window.addEventListener('load', () => {
+  if (localStorage.getItem('userLogged') === 'true') {
+    loginBtn.style.display = 'none';
+    logoutBtn.style.display = 'inline-block';
+  } else {
+    loginBtn.style.display = 'inline-block';
+    logoutBtn.style.display = 'none';
+  }
+});
+
 // BOTAO MODO
 
 document.getElementById('modoBtn').addEventListener('click', () => {
@@ -910,6 +1068,9 @@ modoBtn.addEventListener("click", () => {
 
 </body>
 </html>
+
+
+
 
 
 
